Updated responsive website

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
             <i class="fa-solid fa-bell" style="color: black;"></i>
             <i class="fa-solid fa-user" style="color: black;"></i>
         </div>
+        <div class="navbar__s4">
+            <i class="fa-solid fa-bars"></i>
+        </div>
     </div>
 
     <!--Categories-->
@@ -241,14 +244,14 @@
                 <p>Offer price: ₹699  Actually price:<del> ₹3,000</del></p>
             </div>
 
-            <div class="course-card">
+          <!-- <div class="course-card">
                 <img src="./images/c11.jpg" alt="">
                 <p>Docker</p>
                 <p>Pujari</p>
                 <p>Rating: 3.2 ⭐⭐⭐</p>
                 <p>Offer price: ₹499  Actually price:<del> ₹2,500</del></p>
             </div>
-            
+        -->
         </div>
     </div>
 
